メッセージソースからメッセージを取得するように修正
間に合せで改行には<br>を使用しているためXSSの可能性が残っている。ユーザーの入力値をメッセージ出力部分で使用しないように注意すること。

参考サイト：https://tech-blog.rakus.co.jp/entry/20211124/springboot#%E3%81%AF%E3%81%98%E3%82%81%E3%81%AB

--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -10,7 +10,7 @@
 <body>
 <main>
     <div th:if="${message}" id="flashMessage" class="w-1/4 absolute z-20 -translate-x-1/2 inset-x-2/4 top-4">
-        <p th:text="${message}" class="bg-red-300 text-white rounded p-5 text-center"></p>
+        <p th:utext="${message}" class="bg-red-300 text-white rounded p-5 text-center"></p>
     </div>
     <div th:if="${param.error}" id="loginErrorMessage" class="w-1/4 absolute z-20 -translate-x-1/2 inset-x-2/4 top-4">
         <p class="bg-red-300 text-white rounded p-5 text-center">ログインIDまたはパスワードが違います。</p>
